--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Action.cs" />
     <Compile Include="ConsoleHelper.cs" />
-    <Compile Include="ErrorEventArgs.cs" />
+    <Compile Include="ExceptionEventArgs.cs" />
     <Compile Include="Func.cs" />
     <Compile Include="IRunnable.cs" />
     <Compile Include="SimplestConfig.cs" />
