--- a/DennyTalk/DennyTalk.csproj
+++ b/DennyTalk/DennyTalk.csproj
@@ -18,7 +18,6 @@
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
-    <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -80,8 +79,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WinFormsPopupAlerts, Version=1.0.0.2, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="WinFormsPopupAlerts">
       <HintPath>..\3thparty\WinFormsPopupAlerts.dll</HintPath>
     </Reference>
   </ItemGroup>
